2019-08-12  Mark Wielaard  <mark@klomp.org>

	* gzip.c (open_stream): Return DWFL_E_ERRNO on bad file operation.
	* open.c (libdw_open_elf): New argument bad_elf_ok. Check it and
	return DWFL_E_NOERROR in case it is set and error was DWFL_E_BADELF.
	(__libdw_open_file): Call libdw_open_elf with bad_elf_ok false.
	(__libdw_open_elf): Call libdw_open_elf with bad_elf_ok true.

2019-08-05  Omar Sandoval  <osandov@fb.com>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Assign
	mod->main.fd.

2019-04-28  Mark Wielaard  <mark@klomp.org>

	* frame_unwind.c (expr_eval): Make sure we left shift a unsigned
	64bit value.

2019-04-28  Mark Wielaard  <mark@klomp.org>

	* cu.c (addrarange): Only call realloc when naranges is not zero.

2019-03-27  Mark Wielaard  <mark@klomp.org>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Check
	ph_buffer_size vs xlatefrom.d_size after read_portion call.

2019-02-24  Mark Wielaard  <mark@klomp.org>

	* linux-kernel-modules.c (intuit_kernel_bounds): Init *notes before
	fopen.
	(dwfl_linux_kernel_report_kernel): Remove fake note init empty asm.

2019-01-25  Yonghong Song  <yhs@fb.com>

	* linux-proc-maps.c (proc_maps_report): Use PRIu64, not PRIi64, to
	read the inode number.

2019-01-20  Mark Wielaard  <mark@klomp.org>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Check
	dyn_filesz vs dyn_data_size after read_portion call.

2019-01-16  Mark Wielaard  <mark@klomp.org>

	* linux-core-attach.c (core_next_thread): Pass desc to ebl_core_note.
	(core_set_initial_registers): Likewise.

2018-10-23  Mark Wielaard  <mark@klomp.org>

	* relocate.c (relocate_section): Only sanity check mmapped Elf files
	for overlap. Don't error when section data was malloced, not mmapped.

2018-10-20  Mark Wielaard  <mark@klomp.org>

	* libdwflP.h (__libdw_open_elf): New internal function declaration.
	* open.c (what_kind): Rename close_fd to may_close_fd.
	(__libdw_open_file): Replaced (and renamed) by a call to ...